# readtheplan

./: .gitignore  LICENSE  README.md  action.yml  package.json  pyproject.toml
.github/workflows/: pytest.yml  site.yml  test-action.yml
benchmarks/: README.md  follow-ups.md  results.md  sources.md
benchmarks/plans/01-vpc-module-complete/: analysis.md  notes.md  plan.json
benchmarks/plans/02-eks-managed-node-groups/: analysis.md  notes.md  plan.json
benchmarks/plans/03-rds-upgrade-window/: analysis.md  notes.md  plan.json
benchmarks/plans/04-s3-log-archive/: analysis.md  notes.md  plan.json
benchmarks/plans/08-route53-cutover/: notes.md  (+2 more)
docs/adr/: 0001-explainer-engine.md  0002-plan-input-format.md  0003-risk-classification-taxonomy.md  0004-resource-aware-rule-library.md  0005-compliance-control-mapping.md  0006-iso-27001-control-catalog.md  0007-evidence-envelope.md  0008-signed-attestation.md  0009-hipaa-control-catalog.md  0010-customer-supplied-rule-overrides.md
docs/handoff/: codex-prompt-0001.md  codex-prompt-0002.md  codex-prompt-0003.md  codex-prompt-0004.md  codex-prompt-0005.md  codex-prompt-0006.md  codex-prompt-0007.md  codex-task-0001-soc2-wedge.md  codex-task-0002-required-check-paths.md  codex-task-0003-iso27001-wiring.md  codex-task-0004-evidence-envelope.md  codex-task-0005-signed-attestation.md  codex-task-0006-pytest-workflow.md  codex-task-0007-hipaa-wiring.md
examples/: README.md
examples/01-small-create/: analysis.json  analysis.md  plan.json
examples/02-dangerous-replacement/: README.md  analysis.json  analysis.md  evidence.json  plan.json
examples/03-multi-resource/: analysis.json  analysis.md  plan.json
scripts/: regenerate-examples.sh  run-benchmarks.sh
site/: 404.html  README.md  app.js  index.html  package.json  robots.txt  sitemap.xml  styles.css
site/scripts/: build.js  validate.js
src/readtheplan/: __init__.py  attestation.py  cli.py  controls.py  evidence.py  overlays.py  plan.py  rules.py  signing.py
tests/: test_action_metadata.py  test_adr_docs.py  test_attestation.py  test_cli.py  test_controls.py  test_evidence.py  test_overlays.py  test_plan.py  test_rules.py  test_signing.py  test_site.py
tests/fixtures/: evidence_plan.json  hipaa_plan.json  overlay_example.yaml  signed_envelope.json  tampered_envelope.json  unsigned_envelope.json  valid_plan.json
(+18 files in other folders)
