[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readtheplan"
version = "0.0.1"
description = "Terraform plan risk explainer — reads `terraform plan` and classifies each change as safe/review/dangerous/irreversible. Pre-MVP namespace placeholder."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "texasich" }
]
keywords = ["terraform", "iac", "devops", "devsecops", "compliance", "plan", "review"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/readtheplan/readtheplan"
Repository = "https://github.com/readtheplan/readtheplan"
Issues = "https://github.com/readtheplan/readtheplan/issues"
