[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readtheplan"
version = "0.0.2"
description = "Terraform plan risk explainer — reads `terraform plan` JSON and classifies each change as safe/review/dangerous/irreversible."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "texasich" }
]
keywords = ["terraform", "iac", "devops", "devsecops", "compliance", "plan", "review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/readtheplan/readtheplan"
Repository = "https://github.com/readtheplan/readtheplan"
Issues = "https://github.com/readtheplan/readtheplan/issues"

[project.scripts]
readtheplan = "readtheplan.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
